src/main/default/objects/AccountStatusUpdateSetting__mdt/AccountStatusUpdateSetting__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata which stores configurable values used in the automation of the account status updates.</description>
    <label>Account Status Update Setting</label>
    <pluralLabel>Account Status Update Settings</pluralLabel>
</CustomObject>