src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/AccountFrequency__c.field-meta.xml
<CustomField>
    <fullName>AccountFrequency__c</fullName>
    <label>Account Frequency</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>