src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/AccStatusesToRemRolesFromAcctTeam__c.field-meta.xml
<CustomField>
    <fullName>AccStatusesToRemRolesFromAcctTeam__c</fullName>
    <label>Acc Statuses to Rem Roles from Acc Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>