src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/AccStatusesToUpdateOnNewOrder__c.field-meta.xml
<CustomField>
    <fullName>AccStatusesToUpdateOnNewOrder__c</fullName>
    <label>Acc Statuses to Update on New Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>