src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/NewAccStatusOnNewOrder__c.field-meta.xml
<CustomField>
    <fullName>NewAccStatusOnNewOrder__c</fullName>
    <label>New Acc Status on New Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>