src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/NoOfWeeksNoOrdersLowerLimit__c.field-meta.xml
<CustomField>
    <fullName>NoOfWeeksNoOrdersLowerLimit__c</fullName>
    <label>No of Weeks No Orders - Lower Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>