src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/NoOfWeeksNoOrdersUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>NoOfWeeksNoOrdersUpperLimit__c</fullName>
    <label>No of Weeks No Orders - Upper Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>