src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/UpdatedAccountStatusLowerLimit__c.field-meta.xml
<CustomField>
    <fullName>UpdatedAccountStatusLowerLimit__c</fullName>
    <label>Updated Account Status - Lower Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>