src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/UpdatedAccountStatusMidLimit__c.field-meta.xml
<CustomField>
    <fullName>UpdatedAccountStatusMidLimit__c</fullName>
    <label>Updated Account Status - Mid Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>