src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/UpdatedAccountStatusRecentOrders__c.field-meta.xml
<CustomField>
    <fullName>UpdatedAccountStatusRecentOrders__c</fullName>
    <label>Updated Account Status - Recent Orders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>