src/main/default/objects/AccountStatusUpdateSetting__mdt/fields/UpdatedAccountStatusUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>UpdatedAccountStatusUpperLimit__c</fullName>
    <label>Updated Account Status - Upper Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>